<resources>
    <string name="app_name">Assignment</string>
    <string name="example_text">Example text</string>
    <string name="show_subject">Show subject</string>
    <string name="loading">Loading...</string>
    <string name="exchange_timer">Exchange timer</string>
    <string name="delete_post">Delete post</string>
    <string name="show_map_operators">Show map operators</string>
    <string name="exchange_for_date">Exchange for date</string>
    <string name="exchange_symbols">Exchange symbols</string>
    <string name="show_flatmap">Show flatMap</string>
    <string name="show_map">Show map</string>
    <string name="show_switch_map">Show switch map</string>
    <string name="show_concat_map">Show concat map</string>
    <string name="flat_map">Flat map:</string>
    <string name="test">test</string>
    <string name="switch_map">Switch map:</string>
    <string name="concat_map">Concat map:</string>
    <string name="deleted">Deleted</string>
    <string name="date_show">Showing rates for date %s</string>
    <string name="timer_show">Showing rates every %1$d seconds</string>
    <string name="go_to_exchange_symbols">Going to exchange and symbols activity</string>
    <string name="first">xyz</string>
    <string name="second">Second</string>
    <string name="refresh_rates">Refreshing exchange rates</string>
    <string name="conversion">Conversion</string>
    <string name="result_of_conversion">Result of the conversion from %1$s to %2$s in the amount of %3$s: %4$f</string>
</resources>
