<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/deleted_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/loading"
        android:textColor="?android:attr/colorForeground"
        android:textSize="@dimen/recycler_text_size"
        android:textStyle="bold"
        tools:text="@string/example_text"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/subject_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:onClick="showSubjectExample"
        android:layout_gravity="center_horizontal"
        android:text="@string/show_subject" />

    <Button
        android:id="@+id/flat_map_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:onClick="showFlatMapExample"
        android:layout_gravity="center_horizontal"
        android:text="@string/show_flatmap" />

    <Button
        android:id="@+id/map_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:onClick="showMapExample"
        android:layout_gravity="center_horizontal"
        android:text="@string/show_map" />

    <Button
        android:id="@+id/switch_map_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:onClick="showSwitchMapExample"
        android:layout_gravity="center_horizontal"
        android:text="@string/show_switch_map" />

    <Button
        android:id="@+id/concat_map_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:onClick="showConcatMapExample"
        android:layout_gravity="center_horizontal"
        android:text="@string/show_concat_map" />

    <TextView
        android:id="@+id/subject_text_view"
        android:inputType="textMultiLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        tools:text="@string/example_text" />

    <TextView
        android:id="@+id/switch_map_text_view"
        android:inputType="textMultiLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        tools:text="@string/example_text" />

    <TextView
        android:id="@+id/concat_map_text_view"
        android:inputType="textMultiLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        tools:text="@string/example_text" />

    <TextView
        android:id="@+id/flat_map_text_view"
        android:inputType="textMultiLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        tools:text="@string/example_text" />

    <TextView
        android:id="@+id/map_text_view"
        android:inputType="textMultiLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        tools:text="@string/example_text" />

</LinearLayout>